{
    "name": "baseActions",
    "maps": [
        {
            "name": "Game",
            "id": "7936eef0-140d-497b-8c1d-ecb09ea8701e",
            "actions": [
                {
                    "name": "movement",
                    "type": "Value",
                    "id": "3be5a79a-dc6e-4ec2-90ef-9347038b5897",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "86dbbba1-91a5-4e00-8b99-fffe0118c79c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "crouch",
                    "type": "Button",
                    "id": "28757e52-046a-461c-ac3f-5714658cb8ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "slide",
                    "type": "Button",
                    "id": "9e87bbdb-08b2-4cc4-9079-ce3eea93ae4f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "bslide",
                    "type": "Button",
                    "id": "f54fa882-19a5-4232-9382-64f8193ca19b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "grabL",
                    "type": "Button",
                    "id": "c9d83c59-3c5e-4eac-a276-2d350e4fe4ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "grabR",
                    "type": "Button",
                    "id": "7a242f23-4eaf-441e-a265-64e6e6c46876",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "sprint",
                    "type": "Button",
                    "id": "82defbe7-2d33-4ba3-b60a-a145e0d5e1d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "headlook",
                    "type": "Value",
                    "id": "2228f649-2096-48c5-b382-06a40f7b4623",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "camselect1",
                    "type": "Button",
                    "id": "40c9b04c-7ba2-4779-9774-b02611d13336",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "camselect2",
                    "type": "Button",
                    "id": "66163570-a59b-435f-990e-ad4f9533d2bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "camselect3",
                    "type": "Button",
                    "id": "827a4503-c7b0-4f81-b911-90d689db1bba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "camselect4",
                    "type": "Button",
                    "id": "34b7a627-ad47-4868-a711-bc2b27333b45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "interact",
                    "type": "Button",
                    "id": "d8948a4b-a35a-493d-807f-fd5d578f813b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "d58a4bb9-e92d-44fe-83fe-74faee8b01d2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9400c743-bafd-4673-bb3a-ee23b6338730",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9302d684-0755-4c03-9010-0eebb1db12df",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8c38397a-866d-4932-b474-fbb94bdd4b4d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c5e80cf1-cba9-49ba-a61a-86d31c39e242",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "589fe683-1e3b-43fe-a896-5f24e041bed8",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ffa4098-85e6-47b5-8c22-71f9d06a6ab7",
                    "path": "<Sensor>/{Tilt}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Hardcore",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "018582ac-7d02-4a79-a240-4f41da188ead",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d13181e-da3e-4f64-9de3-e539178715ac",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff301805-0b04-4069-967e-0b0d4829672f",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55dcfde4-bd30-4d05-90fc-2d21d7334d7f",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b212edb-5e9f-45fa-b442-29344baf8ac7",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "slide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d958f605-b38e-428b-a379-f03a6ab76c15",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "slide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0b8e0d6-e7f0-4b67-8b3e-f6f58ab6ea1e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "bslide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5458da6-4880-46d4-831d-c3901a898e43",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "bslide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aaa03611-3191-4b88-a5eb-3d79a17a98c6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "grabL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c502e91-7e38-49cf-a9d0-ddd5348c8e5d",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "grabL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f418bdb-af3d-4b19-b030-e0e3966b5fd4",
                    "path": "<Sensor>/{PrimaryTrigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Hardcore",
                    "action": "grabL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a432a128-7381-4d39-97b1-02335bb0d66b",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71fa5eae-3e83-4976-8e3d-9aecc2432d31",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7edee758-c3ba-40a1-943b-4d92f1b6bcfc",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "grabR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "603dac02-c219-4e03-9350-7ecfa237e749",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "grabR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e48f75e-49e1-4f7e-9497-1f00b2240ccf",
                    "path": "<Sensor>/{PrimaryAction}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Hardcore",
                    "action": "grabR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7efe15f5-876d-4b8c-a2f5-9e8d02c227d6",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "headlook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0574b2d9-9a35-40ec-a902-8ffe687a24fc",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "ScaleVector2(x=20,y=20)",
                    "groups": "Gamepad",
                    "action": "headlook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ad86031-6bbb-4d30-9bd2-6d4a358def01",
                    "path": "<Sensor>/{Secondary2DMotion}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Hardcore",
                    "action": "headlook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47a813f0-d26e-4c65-b86c-00ce88314adf",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "camselect1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51faa7cf-905a-49a3-967e-547480fae682",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "camselect1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1d2f863-26ee-4699-ac3e-be1fcd54207c",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "camselect2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13cf6ac3-33d6-4f0c-9751-6ec8d0f13ab6",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "camselect2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "595db998-76f7-4f7e-95df-78620d6fee2d",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "camselect3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "203826fa-0caa-45ee-9034-04c31c4fdb02",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "camselect3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3066f04c-9e97-495a-9c39-f13b6ea17c24",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "camselect4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e41884dc-6957-44db-87bc-f7619e11388e",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "camselect4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02760eb1-d712-4573-9267-12d639565afb",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default-Keyboard",
                    "action": "interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c696c71e-caa3-4755-aff3-30a0f6fd5f39",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe7943fd-11fa-4504-8df3-d4fed1a9d1e5",
                    "path": "<Sensor>/{SecondaryTrigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Hardcore",
                    "action": "interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "6c639325-b668-4077-817f-298d28905597",
            "actions": [
                {
                    "name": "mousepos",
                    "type": "Value",
                    "id": "294cf41a-bd67-4d48-9553-d52d1dde0fa3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "mouseUnlock",
                    "type": "Button",
                    "id": "70843e2d-8c9a-49ab-8b7e-5bbd3f06150a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "teamSelect",
                    "type": "Button",
                    "id": "3e279137-7f85-442f-bcf6-43a262b4a091",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "classSelect",
                    "type": "Button",
                    "id": "b1e6b585-dc47-41a7-a73a-8f59305d456e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b0577cd5-eee6-414e-b833-c8d7804cc86f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mousepos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb2c2a2d-cb66-4a85-a667-a5f22d02394b",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mousepos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbc53191-027e-423d-9916-ea7f093bbd17",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouseUnlock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e9220fb-6952-4c52-83b2-fcf9345a686f",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "teamSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8adc3fe7-4e59-4d9a-b06f-e9eae2d4239f",
                    "path": "<Keyboard>/comma",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "classSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Default-Keyboard",
            "bindingGroup": "Default-Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Hardcore",
            "bindingGroup": "Hardcore",
            "devices": [
                {
                    "devicePath": "<Gyroscope>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Accelerometer>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<MagneticFieldSensor>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<HumiditySensor>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}